---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP007B.py:5:10: UP007B [*] Use `X | Y` for type annotations
  |
5 | def f(x: Optional[str]) -> None:
  |          ^^^^^^^^^^^^^ UP007B
6 |     ...
  |
  = help: Convert to `X | Y`

ℹ Safe fix
2 2 | from typing import Optional
3 3 | 
4 4 | 
5   |-def f(x: Optional[str]) -> None:
  5 |+def f(x: str | None) -> None:
6 6 |     ...
7 7 | 
8 8 | 

UP007B.py:9:10: UP007B [*] Use `X | Y` for type annotations
   |
 9 | def f(x: typing.Optional[str]) -> None:
   |          ^^^^^^^^^^^^^^^^^^^^ UP007B
10 |     ...
   |
   = help: Convert to `X | Y`

ℹ Safe fix
6  6  |     ...
7  7  | 
8  8  | 
9     |-def f(x: typing.Optional[str]) -> None:
   9  |+def f(x: str | None) -> None:
10 10 |     ...
11 11 | 
12 12 | 

UP007B.py:14:8: UP007B [*] Use `X | Y` for type annotations
   |
13 | def f() -> None:
14 |     x: Optional[str]
   |        ^^^^^^^^^^^^^ UP007B
15 |     x = Optional[str]
   |
   = help: Convert to `X | Y`

ℹ Safe fix
11 11 | 
12 12 | 
13 13 | def f() -> None:
14    |-    x: Optional[str]
   14 |+    x: str | None
15 15 |     x = Optional[str]
16 16 | 
17 17 | 

UP007B.py:15:9: UP007B Use `X | Y` for type annotations
   |
13 | def f() -> None:
14 |     x: Optional[str]
15 |     x = Optional[str]
   |         ^^^^^^^^^^^^^ UP007B
   |
   = help: Convert to `X | Y`

UP007B.py:18:10: UP007B Use `X | Y` for type annotations
   |
18 | def f(x: Optional[int : float]) -> None:
   |          ^^^^^^^^^^^^^^^^^^^^^ UP007B
19 |     ...
   |
   = help: Convert to `X | Y`

UP007B.py:22:10: UP007B Use `X | Y` for type annotations
   |
22 | def f(x: Optional[str, int : float]) -> None:
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^ UP007B
23 |     ...
   |
   = help: Convert to `X | Y`

UP007B.py:26:10: UP007B Use `X | Y` for type annotations
   |
26 | def f(x: Optional[int, float]) -> None:
   |          ^^^^^^^^^^^^^^^^^^^^ UP007B
27 |     ...
   |
   = help: Convert to `X | Y`

UP007B.py:32:28: UP007B [*] Use `X | Y` for type annotations
   |
30 |   # Regression test for: https://github.com/astral-sh/ruff/issues/7131
31 |   class ServiceRefOrValue:
32 |       service_specification: Optional[
   |  ____________________________^
33 | |         list[ServiceSpecificationRef]
34 | |         | list[ServiceSpecification]
35 | |     ] = None
   | |_____^ UP007B
   |
   = help: Convert to `X | Y`

ℹ Safe fix
29 29 | 
30 30 | # Regression test for: https://github.com/astral-sh/ruff/issues/7131
31 31 | class ServiceRefOrValue:
32    |-    service_specification: Optional[
33    |-        list[ServiceSpecificationRef]
34    |-        | list[ServiceSpecification]
35    |-    ] = None
   32 |+    service_specification: list[ServiceSpecificationRef] | list[ServiceSpecification] | None = None
36 33 | 
37 34 | 
38 35 | # Regression test for: https://github.com/astral-sh/ruff/issues/7201

UP007B.py:40:28: UP007B [*] Use `X | Y` for type annotations
   |
38 | # Regression test for: https://github.com/astral-sh/ruff/issues/7201
39 | class ServiceRefOrValue:
40 |     service_specification: Optional[str]is not True = None
   |                            ^^^^^^^^^^^^^ UP007B
   |
   = help: Convert to `X | Y`

ℹ Safe fix
37 37 | 
38 38 | # Regression test for: https://github.com/astral-sh/ruff/issues/7201
39 39 | class ServiceRefOrValue:
40    |-    service_specification: Optional[str]is not True = None
   40 |+    service_specification: str | None is not True = None
41 41 |
